@@ -1,4 +1,5 @@
 0.3.5:
+- Websites can be displayed in a "fake" mobile view, provided by Google GWT; This can be done on-demand, or automatically through in list of websites in preferences;
 - Plugins support;
 - Untrusted SSL certificates support;
 
